[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ron-swanson-client"
authors = [{name = "Mikhail Kravets", email = "michkravets@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "requests >= 2.27, < 3.0",
]

[tool.flit.module]
name = "ron_swanson"

[project.urls]
Home = "https://github.com/MikhailKravets/ron-swanson-client"
